# GeodesicPSIM

./: README.md
C++/: CMakeLists.txt
C++ binary/: GeodesicPSIMMetric.py  ReadMe  ReadMe.docx
C++/GeodesicPSIM_Code/: Feature_extraction.cpp  Feature_extraction.h  Feature_pooling.cpp  Feature_pooling.h  GeodesicPSIM.cpp  common.h  cotmatrix.cpp  cotmatrix.h  create_local_patch.cpp  create_local_patch.h  face_texture_cal.cpp  farthest_point_sampling.cpp  farthest_point_sampling.h  headfile.h  isPointInsidePolygon.cpp  isPointInsidePolygon.h  main.cpp  massmatrix_intrinsic.h  mesh_clean.cpp  mesh_clean.h  patch_cropping.cpp  patch_cropping.h  read_obj.cpp  read_obj.h  rescalePatch.cpp  rescalePatch.h
Matlab/: Demo.m
Matlab/utils/: COMPUTE_mesh_normals.m  Feature_extraction.m  Mesh_to_graph.m  cotmatrix.m  (+12 more)
SourceCode/: CMakeLists.txt
SourceCode/GeodesicPSIM_Code/: Feature_extraction.cpp  Feature_extraction.h  Feature_pooling.cpp  Feature_pooling.h  GeodesicPSIM.cpp  GeodesicPSIM.h  Mesh_to_graph.cpp  Mesh_to_graph.h  common.cpp  common.h  compute_mesh_normals.cpp  compute_mesh_normals.h  create_local_patch.cpp  face_texture_cal.cpp  face_texture_cal.h  farthest_point_sampling.cpp  headfile.h  isPointInsidePolygon.cpp  isPointInsidePolygon.h  main.cpp  mass_cal.cpp  mass_cal.h  massmatrix_intrinsic.cpp  mesh_clean.cpp  mesh_clean.h  normalized.cpp  normalized.h  patch_cropping.cpp  patch_cropping.h  read_obj.cpp  read_obj.h  rescalePatch.cpp  rescalePatch.h  save_obj.cpp  save_obj.h  subdivision.cpp  subdivision.h
Windows binary/: GeodesicPSIMMetric.py  ReadMe.md
